--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -10,7 +10,7 @@ jobs:
     name: Static Code Analysis
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Setup Go
         uses: actions/setup-go@v4
@@ -18,30 +18,7 @@ jobs:
           go-version: '1.21'
           
       - name: Install linters
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
         
       - name: Run GolangCI-Lint
-        run: golangci-lint run --config .golangci.yml ./...
-
-  testing:
-    name: Unit Tests Suite
-    runs-on: ubuntu-latest
-    needs: linting
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Go environment
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-          cache: true
-          
-      - name: Execute tests
-        run: |
-          go mod tidy
-          go test -v -race -cover -coverprofile=coverage.out ./...
-          
-      - name: Upload coverage
-        uses: codecov/codecov-action@v3
-        with:
-          files: coverage.out
+        run: golangci-lint run --config ./.golangci.yml ./...
