--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -22,4 +22,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55
-          args: --config=.golangci.yml --timeout=5m
+          args: --config=.golangci.yml --timeout=5m ./...
