--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -29,7 +29,11 @@ jobs:
           cache: true
       
       - name: Wait for MySQL
-        run: sleep 15
+        run: |
+          for i in {1..10}; do
+            mysqladmin ping -h 127.0.0.1 -u root -proot --silent && break
+            sleep 5
+          done
       
       - name: Initialize database
         run: |
