--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -19,6 +19,8 @@ jobs:
           
       - name: Install linters
         run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
-        
+        env:
+          GO111MODULE: on
+          
       - name: Run GolangCI-Lint
         run: golangci-lint run --config ./.golangci.yml ./...
