ISSUE-2902363488: Исправление проблем

--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -23,4 +23,4 @@ jobs:
           GO111MODULE: on
           
       - name: Run GolangCI-Lint
-        run: golangci-lint run --config ./.golangci.yml ./...
+        run: golangci-lint run --config ./.golangci.yml --timeout=5m ./...
