--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
+          cache: true
           
       - name: Install linters
         run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
