--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -23,3 +23,4 @@ jobs:
         with:
           version: v1.55
           args: --config=.golangci.yml --timeout=5m ./...
+          install-mode: goinstall
