Fix golangci-lint configuration and workflow paths
- Update linting paths in GitHub workflow to check entire project
- Adjust golangci config to logger logger package from analysis
- Remove redundant test file patterns from exclusion list

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,6 +2,9 @@ run:
   timeout: 5m
   tests: true
   modules-download-mode: readonly
+  skip-dirs:
+    - testdata
+    - internal/pkg/logger
 
 linters:
   enable:
