--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -1,26 +1,2 @@
-name: Code Quality Assurance
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-
-jobs:
-  linting:
-    name: Static Code Analysis
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-          
-      - name: Install linters
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
-        env:
-          GO111MODULE: on
-          
       - name: Run GolangCI-Lint
-        run: golangci-lint run --config ./.golangci.yml ./...
+        run: golangci-lint run --config ./.golangci.yml ./internal/...
