Add KYC foundation and fix CI configuration
- Implement base KYC tables in database schema
- Add domain models for KYC verification and jurisdiction rules
- Fix golangci-lint paths in workflow to scan entire project
- Prepare compliance service core structure

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -22,5 +22,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55
-          args: --config=.golangci.yml --timeout=5m ./internal/...
+          args: --config=.golangci.yml --timeout=5m ./...
           install-mode: goinstall
